fix: align go to button

--- a/src/content.scss
+++ b/src/content.scss
@@ -405,7 +405,6 @@ $minimal-z-index: max($github-header-z-index, $github-pull-request-float-header-
           }
 
           .go-to-button {
-            vertical-align: middle;
             white-space: nowrap;
             background: transparent;
             border: none;
